# LegacyCobolInsights

./: .gitignore  README.md  hello.py  pyproject.toml
.claude/: settings.local.json
.claude/commands/: cobol-kg.md
.claude/skills/cobol-kg/: SKILL.md
.claude/skills/document-generation/: SKILL.md
.github/agents/: Cobol Code Analyzer.agent.md  Neo4j Schema Analyzer.agent.md
cobol_agentic_kg/: .env.example  INSTALL_GROQ.md  QUICKSTART.md  README.md  SYSTEM_OVERVIEW.md  requirements.txt  test_system.py
cobol_agentic_kg/agents/: cics_parser.py  copybook_parser.py  cypher_gen.py  document_generator.py  enrichment.py  graph_builder.py  ingestion.py  jcl_parser.py  modernization.py  parsing.py  retrieval.py  tech_debt_analyzer.py  tech_debt_visualizer.py  translation.py  validation.py
cobol_agentic_kg/config/: settings.py
cobol_agentic_kg/evals/: README.md  __init__.py  eval_cypher_gen.py  eval_graph_builder.py  run_all_evals.py  upload_datasets.py
cobol_agentic_kg/evals/datasets/: graph_test_cases.py
cobol_agentic_kg/evals/evaluators/: __init__.py  custom_evaluators.py  graph_evaluators.py
cobol_agentic_kg/tests/: test_parser.py
cobol_agentic_kg/ui/: app.py
cobol_agentic_kg/utils/: cache.py  llm_factory.py  logger.py  neo4j_client.py  state.py
cobol_agentic_kg/workflows/: orchestrator.py
