[project]
name = "legacycobolinsightskg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.0.0",
    "chardet>=5.0.0",
    "gitpython>=3.1.0",
    "hiredis>=2.3.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-experimental>=0.3.0,<0.4.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.1.0",
    "langchain-neo4j>=0.2.0,<0.3.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "langgraph>=0.2.0,<0.3.0",
    "neo4j>=5.0.0,<6.0.0",
    "plotly>=6.5.2",
    "prometheus-client>=0.21.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "streamlit>=1.40.0",
    "streamlit-agraph>=0.0.45",
    "tqdm>=4.60.0",
]
